# CI_CD_PROJ

./: CMakeLists.txt  main.cpp  test.cpp  text
.github/workflows/: git.yml
mymath/: CMakeLists.txt  main.cpp  mymath.cpp  mymath.h
tests/: CMakeLists.txt  test.cpp
